<resources>
    <string name="app_name">DemoWeatherProvider</string>
    <string name="title_activity_settings">@string/app_name</string>

    <!-- Temperature unit -->
    <string name="weather_temp_unit_celsius">Celsius</string>
    <string name="weather_temp_unit_fahrenheit">Fahrenheit</string>

    <!-- Wind speed unit -->
    <string name="weather_wind_speed_unit_kph">Metric (km/h)</string>
    <string name="weather_wind_speed_unit_mph">Imperial (mph)</string>

    <!-- Weather - Weather codes -->
    <string name="weather_0">TORNADO</string>
    <string name="weather_1">TROPICAL_STORM</string>
    <string name="weather_2">HURRICANE</string>
    <string name="weather_3">SEVERE_THUNDERSTORMS</string>
    <string name="weather_4">THUNDERSTORMS</string>
    <string name="weather_5">MIXED_RAIN_AND_SNOW</string>
    <string name="weather_6">MIXED_RAIN_AND_SLEET</string>
    <string name="weather_7">MIXED_SNOW_AND_SLEET</string>
    <string name="weather_8">FREEZING_DRIZZLE</string>
    <string name="weather_9">DRIZZLE</string>
    <string name="weather_10">FREEZING_RAIN</string>
    <string name="weather_11">SHOWERS</string>
    <string name="weather_12">SNOW_FLURRIES</string>
    <string name="weather_13">LIGHT_SNOW_SHOWERS</string>
    <string name="weather_14">BLOWING_SNOW</string>
    <string name="weather_15">SNOW</string>
    <string name="weather_16">HAIL</string>
    <string name="weather_17">SLEET</string>
    <string name="weather_18">DUST</string>
    <string name="weather_19">FOGGY</string>
    <string name="weather_20">HAZE</string>
    <string name="weather_21">SMOKY</string>
    <string name="weather_22">BLUSTERY</string>
    <string name="weather_23">WINDY</string>
    <string name="weather_24">COLD</string>
    <string name="weather_25">CLOUDY</string>
    <string name="weather_26">MOSTLY_CLOUDY_NIGHT</string>
    <string name="weather_27">MOSTLY_CLOUDY_DAY</string>
    <string name="weather_28">PARTLY_CLOUDY_NIGHT</string>
    <string name="weather_29">PARTLY_CLOUDY_DAY</string>
    <string name="weather_30">CLEAR_NIGHT</string>
    <string name="weather_31">SUNNY</string>
    <string name="weather_32">FAIR_NIGHT</string>
    <string name="weather_33">FAIR_DAY</string>
    <string name="weather_34">MIXED_RAIN_AND_HAIL</string>
    <string name="weather_35">HOT</string>
    <string name="weather_36">ISOLATED_THUNDERSTORMS</string>
    <string name="weather_37">SCATTERED_THUNDERSTORMS</string>
    <string name="weather_38">SCATTERED_SHOWERS</string>
    <string name="weather_39">HEAVY_SNOW</string>
    <string name="weather_40">SCATTERED_SNOW_SHOWERS</string>
    <string name="weather_41">PARTLY_CLOUDY</string>
    <string name="weather_42">THUNDERSHOWER</string>
    <string name="weather_43">SNOW_SHOWERS</string>
    <string name="weather_44">ISOLATED_THUNDERSHOWERS</string>
    <string name="weather_3200">NOT_AVAILABLE</string>

    <!-- Weather - Wind directions -->
    <string name="weather_N">North</string>
    <string name="weather_NE">North East</string>
    <string name="weather_E">East</string>
    <string name="weather_SE">South East</string>
    <string name="weather_S">South</string>
    <string name="weather_SW">South West</string>
    <string name="weather_W">West</string>
    <string name="weather_NW">North West</string>

    <string name="weather_unknown">Unknown</string>



    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string name="pref_header_current_weather">Current Weather</string>
    <string name="pref_header_forecast">Forecast</string>

    <string name="pref_category_weather_location">Weather Location</string>
    <string name="pref_default_default_city_name">Nowhere</string>
    <string name="pref_title_default_city_name">Default City Name</string>
    <string name="pref_category_unit_system">Unit System</string>
    <string name="pref_title_temperature_unit">Temperature Unit</string>
    <string name="pref_title_wind_speed_unit">Wind Speed Unit</string>

    <string name="pref_title_weather_status">Weather Status</string>
    <string name="pref_title_temperature">Temperature</string>
    <string name="pref_title_humidity">Humidity</string>
    <string name="pref_title_high">High Temperature</string>
    <string name="pref_title_low">Low Temperature</string>
    <string name="pref_title_wind_speed">Wind speed</string>
    <string name="pref_title_wind_direction">Wind Direction</string>

    <string name="pref_forecast_0">Today</string>
    <string name="pref_forecast_1">Tomorrow</string>
    <string name="pref_forecast_2">2 day later</string>
    <string name="pref_forecast_3">3 day later</string>
    <string name="pref_forecast_4">4 day later</string>
</resources>
