<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_weather_location">

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_default_city_name"
            android:inputType="textCapWords"
            android:key="default_city_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_default_city_name" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_unit_system">
        <ListPreference
            android:defaultValue="C"
            android:entries="@array/temperature_unit_entries"
            android:entryValues="@array/temperature_unit_values"
            android:key="temperature_unit"
            android:title="@string/pref_title_temperature_unit"/>
        <ListPreference
            android:defaultValue="kph"
            android:entries="@array/wind_speed_unit_entries"
            android:entryValues="@array/wind_speed_unit_values"
            android:key="wind_speed_unit"
            android:title="@string/pref_title_wind_speed_unit"/>
    </PreferenceCategory>

</PreferenceScreen>
