<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <ListPreference
            android:defaultValue="3200"
            android:entries="@array/weather_status_entries"
            android:entryValues="@array/weather_status_values"
            android:key="current_weather_status"
            android:title="@string/pref_title_weather_status"/>
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberSigned"
            android:key="current_temperature"
            android:title="@string/pref_title_temperature"/>
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="current_humidity"
            android:title="@string/pref_title_humidity"/>
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberSigned"
            android:key="today_high"
            android:title="@string/pref_title_high"/>
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberSigned"
            android:key="today_low"
            android:title="@string/pref_title_low"/>
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberSigned|numberDecimal"
            android:key="current_wind_speed"
            android:title="@string/pref_title_wind_speed"/>
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/wind_direction_entries"
            android:entryValues="@array/wind_direction_values"
            android:key="current_wind_direction"
            android:title="@string/pref_title_wind_direction"/>

</PreferenceScreen>
